--- a/src/css/page.css
+++ b/src/css/page.css
@@ -17,6 +17,7 @@ body {
     text-overflow: ellipsis;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    word-break: break-word;
 }
 .unselectable {
     -moz-user-select:none;/*火狐*/
