--- a/src/css/page.css
+++ b/src/css/page.css
@@ -19,6 +19,14 @@ body {
     -webkit-box-orient: vertical;
     word-break: break-word;
 }
+.lines3 {
+    text-overflow: -o-ellipsis-lastline;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    word-break: break-word;
+}
 .unselectable {
     -moz-user-select:none;/*火狐*/
     -webkit-user-select:none;/*webkit浏览器*/
