--- a/src/css/page.css
+++ b/src/css/page.css
@@ -36,11 +36,11 @@ body {
 }
 
 .selectable {
-    -moz-user-select:auto;/*火狐*/
-    -webkit-user-select:auto;/*webkit浏览器*/
-    -ms-user-select:auto;/*IE10*/
-    -khtml-user-select:auto;/*早期浏览器*/
-    user-select:auto;
+    -moz-user-select:text;/*火狐*/
+    -webkit-user-select:text;/*webkit浏览器*/
+    -ms-user-select:text;/*IE10*/
+    -khtml-user-select:text;/*早期浏览器*/
+    user-select:text;
 }
 
 .noscrollbar::-webkit-scrollbar{
